# ml_with_python

./: pyproject.toml
part_1_data_preprocessing/: pyproject.toml  train_test.py
part_1_data_preprocessing/part_1_data_preprocessing/: categorical_data.py  data_preprocessing_template.py  missing_data.py
part_2_regression/: pyproject.toml
part_2_regression/simple_linear_regression/: simple_linear_regression.ipynb  simple_linear_regression.py
